ADD: message in terminal for -d

--- a/lib/my/Makefile
+++ b/lib/my/Makefile
@@ -5,7 +5,18 @@
 ## Makefile
 ##
 
-SRC    =    $(wildcard *.c)
+SRC    =    $(wildcard *.c) \
+	  my_printf/my_printf.c \
+	  my_printf/struct_utils.c \
+	  my_printf/type_base.c \
+	  my_printf/type_char.c \
+	  my_printf/type_num.c \
+	  my_printf/type_utils.c \
+	  my_printf/printf_handling.c \
+	  my_printf/type_float.c \
+	  my_printf/str_utils.c \
+	  my_printf/type_long_base.c \
+	  my_printf/my_fprintf.c
 
 OBJ	=	$(SRC:.c=.o)
 
